# mega-sdist

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  mega-sdist.cabal  mega-sdist.hs  package.yaml  stack.yaml
